--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=Moviefn;User Id=postgres;Password=**************"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=Moviefn;User Id=postgres;Password=*****"
   },
   "Logging": {
     "LogLevel": {
